Closed
Bug 1006998
Opened 11 years ago
Closed 11 years ago
Fix -Wdeprecated-writable-strings warnings by const-correcting typelib/xpt code
Categories
(Core :: XPCOM, defect)
Tracking
()
RESOLVED
FIXED
mozilla32
Tracking | Status | |
---|---|---|
firefox31 | --- | unaffected |
firefox32 | --- | fixed |
People
(Reporter: cpeterson, Assigned: cpeterson)
References
(Blocks 1 open bug)
Details
(Keywords: regression)
Attachments
(1 file)
8.72 KB,
patch
|
bholley
:
review+
|
Details | Diff | Splinter Review |
These clang warnings are a regression from bug 1005321's conversion of xpt from C to C++, where static strings are const data:
xpcom/typelib/xpt/tests/PrimitiveTest.cpp:29:25 [-Wdeprecated-writable-strings] conversion from string literal to 'char *' is deprecated
xpcom/typelib/xpt/tests/PrimitiveTest.cpp:37:47 [-Wdeprecated-writable-strings] conversion from string literal to 'char *' is deprecated
xpcom/typelib/xpt/tests/SimpleTypeLib.cpp:73:51 [-Wdeprecated-writable-strings] conversion from string literal to 'char *' is deprecated
xpcom/typelib/xpt/tests/SimpleTypeLib.cpp:74:51 [-Wdeprecated-writable-strings] conversion from string literal to 'char *' is deprecated
xpcom/typelib/xpt/tests/SimpleTypeLib.cpp:84:7 [-Wdeprecated-writable-strings] conversion from string literal to 'char *' is deprecated
xpcom/typelib/xpt/tests/SimpleTypeLib.cpp:84:20 [-Wdeprecated-writable-strings] conversion from string literal to 'char *' is deprecated
xpcom/typelib/xpt/tests/SimpleTypeLib.cpp:89:51 [-Wdeprecated-writable-strings] conversion from string literal to 'char *' is deprecated
xpcom/typelib/xpt/tests/SimpleTypeLib.cpp:96:51 [-Wdeprecated-writable-strings] conversion from string literal to 'char *' is deprecated
Attachment #8418561 -
Flags: review?(bobbyholley)
Updated•11 years ago
|
Attachment #8418561 -
Flags: review?(bobbyholley) → review+
Assignee | ||
Comment 1•11 years ago
|
||
Comment 2•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
Comment 3•11 years ago
|
||
Thanks so much for picking up after me. :-)
You need to log in
before you can comment on or make changes to this bug.
Description
•