Bug 1006998 - Fix -Wdeprecated-writable-strings warnings by const-correcting typelib/xpt code. r=bholley